tests/valid/definite/SetIntersect_Valid_2.whiley
void System::main([string] args):
    {int} xs = {1,2,3}
    [int] ys = [2,3,4]
    {int} zs
    zs = xs ∩ ys
    print str(zs)